# mod_installer

./: .editorconfig  .envrc-sample  .gitattributes  .gitignore  .gitlab-ci.yml  .mise.toml  .pre-commit-config.yaml  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  README.md  check-version.sh  cliff.toml  contributing.md  default.nix  example_config.toml  flake.nix  hk.pkl  readme.md  rust-toolchain.toml  shell.nix
.github/workflows/: build.yml  changelog.yml  check.yaml  docs.yaml  main.yaml  release.yml  safety.yml
config/: Cargo.toml
config/src/: args.rs  colors.rs  lib.rs  log_options.rs  meta.rs  parser_config.rs  weidu_log_options.rs
fixtures/: weidu
gui/: Cargo.toml  flake.nix
gui/src/: installer.rs  installer_type.rs  main.rs  message.rs  runner.rs  state.rs
gui/src/state/: eet.rs  mod.rs  normal.rs  shared.rs
gui_python/: main.py  pyproject.toml
gui_python/app/resources/: theme.qss
gui_python/app/ui/: page_frame.py  step1_setup.py  step2_scan_select.py  step3_order.py  step4_export.py  step5_install.py  wizard_window.py
scripts/: build.sh  check-git.sh  check-version.sh
src/: args.rs  component.rs  installers.rs  internal_log.rs  log_file.rs  main.rs  mod_component.rs  mods.rs  parser.rs  parser_config.rs  raw_reciever.rs  runner.rs  scan.rs  scan_components.rs  scan_langauges.rs  state.rs  utils.rs  weidu.rs  weidu_batched_components.rs  weidu_batched_install_order.rs  weidu_component.rs  weidu_install_block.rs  weidu_parser.rs
src/config/: args.rs  colors.rs  log_options.rs  meta.rs  mod.rs  options.rs  parser_config.rs  state.rs  weidu_log_options.rs
src/scan/: components.rs  languages.rs  mod.rs
src/weidu/: batched_components.rs  component.rs  install_block.rs  install_order.rs  mod.rs
