[package]
name = "mod_installer"
version = "13.1.0"
edition = "2024"
authors = [ "dark0dave" ]
documentation = "https://raw.githubusercontent.com/dark0dave/mod_installer/main/README.md"
homepage = "https://github.com/dark0dave/mod_installer"
description = "The Infinity Engine Mod Installer is a tool designed to automate the installation of mods for Infinity Engine games such as Baldur's Gate, Icewind Dale, and Planescape: Torment. It uses a file called 'weidu.log' to determine which mods to install and how to install them."
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/dark0dave/mod_installer"
categories = [ "command-line-interface", "filesystem" ]
keywords = [
  "cli",
  "infinity-engine",
  "modding-tools",
  "terminal",
  "tool"
]

[workspace]
members = ["config", "gui"]

[dependencies]
anstyle = "1.0.10"
clap = { version = "^4.5.49", features = ["derive", "env", "string"] }
config = { path = "./config" }
confy = "^2.0.0"
env_logger = "^0.11.8"
log = "^0.4.22"
reqwest = {version = "^0.13.1", features = ["blocking"]}
serde = { version = "^1.0.217", features = ["derive"] }
serde_derive = "^1.0.152"
tempfile = "^3"
url = "2.5.4"
walkdir = "^2.3.2"
zip = "^7.0.0"

[dev-dependencies]
pretty_assertions = "^1.4.1"
