[package]
name = "config"
version = "1.0.0"
edition = "2024"

[dependencies]
anstyle = "1.0.10"
clap = { version = "^4.5.49", features = ["derive", "env", "string"] }
confy = "^2.0.0"
serde = { version = "^1.0.217", features = ["derive"] }
serde_derive = "^1.0.152"

[dev-dependencies]
pretty_assertions = "^1.4.1"
